# syoch-site

./: .firebaserc  .gitignore  .gitmodules  file handler specifics  firebase.json  front.code-workspace  index.html  note.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.ts
.firebase/: .gitignore
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
public/: global.css  index.html
public/apps/: taiko.html
public/apps/TinyDC/: index.js
public/archived/CTRL/: index.html
public/archived/what/: mirai.html
public/archived/what/Sakuzyo/: index.html
public/archived/what/memories/: index.html
public/libs/old/: capstone-ppc.js  chat.js  time.js
public/notes/: cmds.txt  requirements.txt  todo.md
src/: App.svelte  firebase.ts  global.css  location_hash.ts  main.ts
src/@types/: global.d.ts
src/apps/: Debug.svelte  DebugTerminal.ts
src/apps/Introducation/: Organization.svelte  contact.svelte  github_organizations.svelte  index.svelte
src/apps/calc/: index.svelte
src/apps/tools/: GHSDemangle.svelte  HexAdder.svelte  PNGExtractor.svelte
src/apps/wiiu/: CafeCode.svelte  PPCDisassembler.svelte  cafecode.js  cafecode.ts  ppc_folding.ts
src/archived/what/: baka.html  index.html
src/archived/what/Sakuzyo/: index.html
src/archived/what/Sakuzyo/about/: TK.html
src/assets/: .gitignore
src/components/: DrawerItem.svelte  FullsizeTextarea.svelte  IconText.svelte  InlineConverter.svelte  LeadingIcon.svelte  OverrayableTextarea.svelte  SizedTextarea.svelte  Terminal.svelte  Terminal.ts
src/datas/: introducation.ts
src/libs/: index.ts
src/libs/fs/: index.ts  types.ts
src/libs/old/: autoreload.js  time.js
src/notes/: cafecode.md
src/old_apps/: 2048.html  number.html
src/old_apps/TinyDC/: index.html
src/old_apps/_chat/: index.html  index.js
src/old_apps/chat/: index.css  index.html  index.js
src/wasm/: Cargo.toml
src/wasm/kernel/: Cargo.toml
src/wasm/kernel/src/: automap.rs  kernel.rs  lib.rs  python.rs
src/wasm/kernel/src/fs/: fs_cursor.rs  fs_obj.rs  mod.rs
src/wasm/kernel/src/process/: kernel_process.rs  mod.rs
src/wasm/kernel/src/resources/: kernel_resource.rs  locked_resource.rs
src/wasm/main/: Cargo.toml
src/wasm/main/src/: generator_wrapper.rs  lib.rs  main.rs  python.rs
src/wasm/main/src/python/: cworks.rs  mod.rs
src/wasm/python/: Cargo.toml
src/wasm/python/src/: lib.rs
src/wasm/python/src/python/: cworks.rs  mod.rs
src/wasm/src/: generator.rs  lib.rs  main.rs
src/wasm/src/kernel/: kernel.rs  mod.rs  python.rs
src/wasm/src/kernel/fs/: fs_cursor.rs  fs_obj.rs  mod.rs
src/wasm/src/kernel/process/: mod.rs
src/wasm/src/kernel/resources/: locked_resource.rs  mod.rs
src/wasm/wasm/: Cargo.toml
src/wasm/wasm/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
