[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ghs_demangle = { git = "https://github.com/syoch/ghs_demangle"}
wasm-bindgen = "0.2.83"
chrono = "0.4.22"