[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "kernel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", features=["freeze-stdlib"] }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", features=["freeze-stdlib"] }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", features=["threading", "zlib", "bz2", "ssl", "ssl-vendor"]  }
once_cell = "1.3.1"
